# socks5-proxy

./: .gitignore  Cargo.toml  README.md
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json  windows-app.manifest
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/flags_rgba/: ad.rgba  ae.rgba  af.rgba  ag.rgba  ai.rgba  al.rgba  am.rgba  ao.rgba  aq.rgba  ar.rgba  as.rgba  at.rgba  au.rgba  aw.rgba  ax.rgba  az.rgba  ba.rgba  bb.rgba  bd.rgba  be.rgba  bf.rgba  bg.rgba  bh.rgba  bi.rgba  bj.rgba  bl.rgba  bm.rgba  bn.rgba  bo.rgba  bq.rgba  br.rgba  bs.rgba  bt.rgba  bv.rgba  bw.rgba  by.rgba  bz.rgba  ca.rgba  cc.rgba  cd.rgba  (+205 more)
apps/desktop/src-tauri/runtime/windows/: emergency-network-reset-windows.ps1  restore-network-windows.ps1
apps/desktop/src-tauri/src/: diagnostics.rs  elevation.rs  geo.rs  main.rs  network.rs  platform.rs  runtime.rs  single_instance.rs  tray.rs  tun_backend.rs  types.rs  util.rs  watcher.rs  windows_recovery.rs
apps/desktop/web/: index.html
apps/desktop/web/src/: main.js  styles.css
crates/proxy-cli/: Cargo.toml
crates/proxy-cli/src/: main.rs
crates/proxy-core/: Cargo.toml
crates/proxy-core/src/: config.rs  daemon.rs  desktop_entry.rs  error.rs  lib.rs  local_socks.rs  paths.rs  proxy_url.rs  secret.rs  socks5.rs  system_proxy.rs  tun.rs  tun_runner.rs  validate.rs
crates/proxy-daemon/: Cargo.toml
crates/proxy-daemon/src/: main.rs
crates/proxy-platform-windows/: Cargo.toml
crates/proxy-platform-windows/src/: lib.rs
packaging/: socks5proxyd.service
scripts/: build-desktop-linux.sh  build-desktop-windows.cmd  build-desktop-windows.ps1  diag-vpn.sh  emergency-network-reset-windows.cmd  inspect-wfp-windows.ps1  install-deps-linux.sh  install-deps-windows.ps1  install-runtime-windows.ps1  run-guarded-windows-live-test.ps1  save-network-snapshot-windows.ps1  test-final-installed-gui-parity-windows.ps1  test-windows-installer.ps1  test-z1-windows.ps1  test-z2-crash-recovery-windows.ps1  test-z2-installed-gui-windows.ps1  test-z2-windows.ps1  test-z3-windows.ps1  test-z3-wireguard-live-windows.ps1  test-z4-wfp-live-windows.ps1  test-z4-windows.ps1  uninstall-linux.sh  verify-windows-bundle.ps1  watch-tun-recovery-windows.ps1
