[workspace]
members = [
  "crates/proxy-core",
  "crates/proxy-cli",
  "crates/proxy-daemon",
  "crates/proxy-platform-windows",
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "1.0.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
serde_json = "1"
