[package]
name = "proxy-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "proxy_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Networking_WinInet"] }
