[package]
name = "socks5proxyd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
proxy-core = { path = "../proxy-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
