[package]
name = "proxy-platform-windows"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
proxy-core = { path = "../proxy-core" }
serde_json = { workspace = true }
sha2 = { workspace = true }
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_NetworkManagement_WindowsFilteringPlatform",
  "Win32_Security",
  "Win32_System_Rpc",
] }
